# freesteam

./: CHANGELOG.txt  CMakeLists.txt  README-3.0.md  README.md
gsl/: CMakeLists.txt
gsl-light/: CMakeLists.txt
gsl-light/multiroots/: gsl_multiroots.h  test.c
gsl/multiroots/: Makefile.am  convergence.c  enorm.c  fdfsolver.c  gnewton.c  gsl_multiroots.h  hybridj.c  multiroots.h  newton.c  test.c  test_funcs.c  test_funcs.h
newton-method/: CMakeLists.txt
newton-method/multiroots/: convergence.c  enorm.c  newton.c  test_funcs.c  test_funcs.h
python/: CMakeLists.txt  Thdiagram.py  freesteam.i  hsdiagram.py  pTdiagram.py  rhoTdiagram.py  satcurve.py  tables.py  test.py  thcond.py  tsp3d.py
python/defunct/: phdiagram.py
src/: config.h  solver2.c  solver2_with_gsl.c  solver2_without_gsl.c  solver3.c  solver3.h
